src/test/java/testfiles/invalid/semanticErr/generic_list/removeWrongType.wacc
# basic list declaration and assignment

# Output:
# #empty#

# Exit:
# 200

# Program:

begin
  list<int> a = newlist() ;
  bool b = true ; 
  a.addToList(2) ;
  a.removeFromList(b)
end
